[package]
name = "esp32-rs-alarm-clock"
version = "0.1.0"
authors = ["Yann Le Vagueres <yann.lv@live.fr>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
esp-hal = { version = "0.17.0", features = ["esp32", "embedded-hal-02", "embassy-time-timg0", "embassy-executor-thread", "async", "embassy-integrated-timers"] }
esp-println = { version = "0.9.1", features = ["esp32"] }
ds323x = "0.5.1"
critical-section = "1.1.2"
tea5767 = "0.1.0"
shared-bus = "0.3.1"
embassy-executor = "0.5.0"
embassy-time = "0.3.0"
defmt-rtt = "0.4.0"
embassy-embedded-hal = "0.1.0"
embassy-sync = { version = "0.5.0", features = ["defmt"] }
static_cell = "2.0.0"
embedded-hal-async = "1.0.0"
panic-halt = "0.2.0"
panic-abort = "0.3.2"
defmt = "0.3.6"


